# projeto-telecom-2024

./: CMakeLists.txt  Configurar CodeBlocks.cmd  LEIA-ME.md  README.md
CodeBlocks/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  fft_telecom.cbp
CodeBlocks/libs/TinyRenderer/: Makefile  TinyRenderer.cbp  cmake_install.cmake
libs/TinyRenderer/: CMakeLists.txt  Geometry.cpp  ICanvas.cpp  TinyRenderer.cpp  WindowsGDICanvas.cpp  WindowsUtils.cpp  framework.h
libs/TinyRenderer/include/: Geometry.h  ICanvas.h  TinyRenderer.h
libs/TinyRenderer/include/windows/: WindowsGDICanvas.h  WindowsUtils.h
src/: framework.h  main.cpp  pch.h  utils.hpp
